Fix sidebar height on content overlap

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -9,6 +9,8 @@
 :root {
   --content-pad: 1rem 2rem;
   --main-color: #596d48;
+  --bg-color: #f9fafb;
+  --err-color: #ff5b5b;
   --light-gray: #d7d7d7;
   --box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
 }
@@ -76,7 +78,7 @@
   }
 
   .sidebar {
-    max-height: 100vh;
+    min-height: 100vh;
     flex: 1;
   }
 
@@ -90,7 +92,7 @@
   flex-direction: column;
   justify-content: center;
   flex: 2;
-  background-color: #f9fafb;
+  background-color: var(--bg-color);
 }
 
 .disclaimer {
@@ -154,7 +156,7 @@
 }
 
 .form-widget input:not(:placeholder-shown):invalid {
-  border: 1px solid rgb(255, 91, 91);
+  border: 1px solid var(--err-color);
 }
 
 h2 {
